# spacekit-contract-sdk

./: Cargo.toml  README.md
contract-lang/: .gitignore  Cargo.toml  README.md  SKCL_V1.md
contract-lang/examples/: astra_token.scl
contract-lang/src/: main.rs
src/: agent_host.rs  lib.rs  wire.rs
