[package]
name = "spacekit-contract-sdk"
version = "0.1.0"
edition = "2021"
description = "Minimal no_std SDK for SpaceKit WASM smart contracts (Host ABI: env, spacekit_llm, spacekit_storage)"
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/spacekit-xyz/spacekit-contract-sdk"
homepage = "https://spacekit.xyz"
keywords = ["spacekit", "wasm", "smart-contract", "no_std"]
categories = ["no-std", "cryptography"]

[lib]
crate-type = ["rlib"]

[dependencies]

