[package]
name = "spacekit-contract-lang"
version = "1.0.0"
edition = "2021"
description = "SpaceKit.xyz Contract Language compiler"
authors = ["SWTCH Labs LLC"]
repository = "https://github.com/spacekit-xyz/spacekit-contract-sdk"
homepage = "https://spacekit.xyz"
documentation = "https://spacekit.xyz/docs"
readme = "README.md" 
keywords = ["spacekit", "compiler", "smart-contracts", "wasm"] 
categories = ["compilers", "cryptography", "wasm"] 
license-file = "LICENSE"

[dependencies]
sha3 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
